<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">CarbonChain</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="loading_done">加载完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="back">返回</string>
    <string name="serch_hint">搜索</string>
    <string name="cancel">取消</string>
    <string name="cancelTwo">取\t消</string>
    <string name="ok">确定</string>
    <string name="sign_in_date">入职日期</string>
    <string name="message_hint">消息提示</string>
    <string name="cue_msg">提示消息</string>
    <string name="reject">驳回</string>
    <string name="inputRejectReason">请输入驳回原因</string>
    <string name="pass">通\t过</string>
    <string name="rejectTwo">驳\t回</string>
    <string name="public_cancel_text">取消</string>
    <string name="public_delete_text">删除</string>
    <string name="public_select_all_text" tools:ignore="MissingTranslation">全选</string>
    <string name="public_select_all_cancel_text" tools:ignore="MissingTranslation">取消全选</string>
    <string name="public_confirm_text" tools:ignore="MissingTranslation">确定</string>
    <string name="phone_recovery_text" tools:ignore="MissingTranslation">恢复</string>
    <string name="public_new_folder_text" tools:ignore="MissingTranslation">新建文件夹</string>
    <string name="public_bottom_operation_more_title_default_text" tools:ignore="MissingTranslation">更多</string>
    <string name="public_rename_text" tools:ignore="MissingTranslation">重命名该文件</string>
    <string name="public_item_title_default_text_folder" tools:ignore="MissingTranslation">我是文件夹</string>
    <string name="public_item_time_default_text" tools:ignore="MissingTranslation">2020年01月10日 22:34</string>
    <string name="public_item_size_default_text" tools:ignore="MissingTranslation">17.4K</string>
    <string name="public_item_picture_text" tools:ignore="MissingTranslation">我是图片.jpg</string>
    <string name="public_item_document_text" tools:ignore="MissingTranslation">我是文档.ppt</string>
    <string name="public_text_week_1" tools:ignore="MissingTranslation">每周一</string>
    <string name="public_text_week_2" tools:ignore="MissingTranslation">每周二</string>
    <string name="public_text_week_3" tools:ignore="MissingTranslation">每周三</string>
    <string name="public_text_week_4" tools:ignore="MissingTranslation">每周四</string>
    <string name="public_text_week_5" tools:ignore="MissingTranslation">每周五</string>
    <string name="public_text_week_6" tools:ignore="MissingTranslation">每周六</string>
    <string name="public_text_week_7" tools:ignore="MissingTranslation">每周日</string>
    <string name="public_text_year" tools:ignore="MissingTranslation">年</string>
    <string name="public_text_month" tools:ignore="MissingTranslation">月</string>
    <string name="public_text_day" tools:ignore="MissingTranslation">日</string>
    <string name="public_text_hour" tools:ignore="MissingTranslation">时</string>
    <string name="public_text_minute" tools:ignore="MissingTranslation">分</string>
    <string name="public_text_complete" tools:ignore="MissingTranslation">完成</string>
    <string name="public_btn_save_text" tools:ignore="MissingTranslation">保存</string>
    <string name="welcome_start">Start</string>
    <string name="login_wallet_name">CarbonChain</string>
    <string name="login_no_account">您的账号不存在</string>
    <string name="login_password_error">您的密码不对哦</string>
    <string name="login_btn_login">登录</string>
    <string name="login_edit_text_hint_account">请输入账号</string>
    <string name="login_edit_text_hint_password">请输入密码</string>
    <string name="login_forgot_password">忘记密码了？</string>
    <string name="login_register_now">现在注册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="register_bind_device_step_1">生成身份ID</string>
    <string name="register_bind_device_step_2">验证手机</string>
    <string name="register_bind_device_step_3">设置密码</string>
    <string name="register_bind_device_create_carbon_chain_id">生成炭承身份ID</string>
    <string name="register_bind_device_create_carbon_chain_id_remark">为保障您的数据安全，请先扫描设备上的二维码创建炭承身份ID</string>
    <string name="register_bind_device_scan_text">扫一扫</string>
    <string name="register_bind_device_scan_continue_text">继续</string>
    <string name="register_bind_device_scan_continue_layout_id_success">炭承身份ID已生成</string>
    <string name="register_bind_device_scan_continue_layout_id_success_remark">为了您的数据和账户安全，请先妥善保管</string>
    <string name="register_bind_device_scan_continue_card_did_text">5KYZdUEo39z3FPrtuX2QbbwGnNP5zTd7yyr2SC1j299sBCnWjss</string>
    <string name="register_bind_device_scan_continue_card_did_title">炭承身份ID</string>
    <string name="register_bind_phone_title">注册</string>
    <string name="register_bind_phone_title_remrk">Hi!欢迎来使用炭承app</string>
    <string name="register_bind_phone_body_no_account">您的账号不存在</string>
    <string name="register_bind_phone_body_code_error">动态码不对哦</string>
    <string name="register_bind_phone_text_hint">请输入手机号</string>
    <string name="register_bind_phone_body_code_hint">请输入动态码</string>
    <string name="register_bind_phone_next_text">下一步</string>
    <string name="register_bind_phone_already_has_account_text">已有账号</string>
    <string name="register_bind_phone_next_please_input_code_text">请输入验证码</string>
    <string name="register_bind_phone_next_please_input_code_remark_text">验证码已发送到您的手机\n+86-15902100000</string>
    <string name="register_bind_phone_next_code_get_again_text">重新获取</string>
    <string name="register_bind_password_title_text">设置密码</string>
    <string name="register_bind_password_text_hint">请输入密码</string>
    <string name="register_bind_password_msg_rule_length_text">*至少8位字符</string>
    <string name="register_bind_password_msg_rule_case_low_text">*包含小写字母</string>
    <string name="register_bind_password_msg_rule_case_up_text">*包含大写字母</string>
    <string name="register_bind_password_msg_rule_include_number_text">*包含数字</string>
    <string name="register_bind_password_confirm_text">确认设置密码</string>
    <string name="register_bind_password_confirm_hint">再次输入密码以确认</string>
    <string name="register_bind_password_confirm_error_text">您的密码不对哦</string>
    <string name="main_navigation_smart_home_text">家居</string>
    <string name="main_navigation_storage_text">存储</string>
    <string name="main_navigation_find_text">发现</string>
    <string name="main_navigation_digital_assets_text">资产</string>
    <string name="main_navigation_mine_text">我的</string>
    <string name="main_storage_title_text">CarbonLink_Disk</string>
    <string name="main_storage_body_1_available_text">可用空间 500G</string>
    <string name="main_storage_body_1_total_text">总共 1000G</string>
    <string name="main_storage_body_1_items_image_text">图片</string>
    <string name="main_storage_body_1_items_video_text">视频</string>
    <string name="main_storage_body_1_items_mp3_text">音频</string>
    <string name="main_storage_body_1_items_file_text">文档</string>
    <string name="main_storage_body_1_items_other_text">其它</string>
    <string name="main_storage_manage_text">存储管理</string>
    <string name="main_storage_body_2_image_text">图片</string>
    <string name="main_storage_body_2_video_text">视频</string>
    <string name="main_storage_body_2_document_text">文档</string>
    <string name="main_storage_body_2_voice_text">音频</string>
    <string name="main_storage_body_2_pub_space_text">公共空间</string>
    <string name="main_storage_body_2_phone_backup_text">手机备份</string>
    <string name="main_storage_body_2_my_collect_text">我的收藏</string>
    <string name="main_storage_body_2_transfer_text">传输</string>
    <string name="main_storage_body_2_secure_text">保险箱</string>
    <string name="main_storage_body_2_trash_text">回收站</string>
    <string name="main_mine_title_text">我的</string>
    <string name="main_mine_item_profile_text">个人信息</string>
    <string name="main_mine_item_icon_user_manage_text">用户管理</string>
    <string name="main_mine_item_icon_wallet_manage_text">钱包管理</string>
    <string name="main_mine_item_icon_machine_manage_text">设备管理</string>
    <string name="main_mine_item_icon_software_manage_text">软件管理</string>
    <string name="main_mine_item_icon_help_text">帮助与反馈</string>
    <string name="main_mine_item_icon_code_text">我的二维码</string>
    <string name="main_mine_item_icon_about_text">关于</string>
    <string name="asset_tab_layout_digit_text">数字资产</string>
    <string name="asset_tab_layout_data_text">数据资产</string>
    <string name="asset_digit_all_text">总资产（￥）</string>
    <string name="asset_digit_all_number_default">0.00</string>
    <string name="asset_digit_oprations_transfer_text">转账</string>
    <string name="asset_digit_oprations_receive_text">收钱</string>
    <string name="asset_digit_oprations_record_text">交易记录</string>
    <string name="asset_digit_asset_manage_text">资产管理</string>
    <string name="asset_digit_asset_manage_soft_text">热钱包</string>
    <string name="asset_digit_asset_manage_hard_text">硬件钱包</string>
    <string name="asset_add_soft_wallet_create_text" translatable="false">创建钱包</string>
    <string name="asset_add_soft_wallet_import_text">导入钱包</string>
    <string name="asset_select_coin_type_text">选择钱包币种</string>
    <string name="asset_select_coin_type_more_text">请选择您要创建的币种（可多选）</string>
    <string name="asset_select_coin_confirm_add_text">确定添加</string>
    <string name="coin_name_btc">BTC</string>
    <string name="coin_name_full_btc">Bitcoin</string>
    <string name="coin_name_usdt">USDT</string>
    <string name="wallet_backup_tips1">最后一步：立即备份你的钱包！</string>
    <string name="wallet_backup_tips2">备份钱包：导出「助记词」并抄写到安全的地方，千万不要保存到网络上，然后尝试转入、转出小额资产开始使用.</string>
    <string name="wallet_backup_backup_btn">备份钱包</string>
    <string name="wallet_backup_skip_btn">跳过</string>
    <string name="wallet_backup_backup_help">查看备份详细教程</string>
    <string name="document_default_text_1">一、教材与学生情况分析</string>
    <string name="document_default_text_2">&#160;&#160;&#160;&#160;《按钮控制的LED》位于《Arduino创意机器人》课程的第一章《LED》的第三课，经过上一节课的学习，学生已经掌握了数字口的输出，熟悉了ArduBlock编程环境，学会了Arduino控制器与LED的连接。这一节课主要是实现按钮控制LED，从物理电路的连接上，增加了按钮；从编程上，增加了数字口的输入、选择结构等模块。</string>
    <string name="document_default_text_3">二、教学目标</string>
    <string name="document_default_text_4">1.通过制作按钮控制的LED，初步了解按钮，掌握选择结构以及数字口的输入。\n2.体验Arduino机器人控制的一般过程。\n3.体验按钮控制LED编程的过程，激发对编程的兴趣。</string>
    <string name="document_default_text_5">三、教学重难点</string>
    <string name="document_default_text_6">&#160;&#160;&#160;&#160;教学重点：数字口的输入 选择结构\n&#160;&#160;&#160;&#160;教学难点：数字口的输入</string>
    <string name="smart_home_camera_sleep_confirm_title_text">确认要摄像头休眠？</string>
    <string name="smart_home_camera_sleep_confirm_remark_text">休眠将无法使用实时监控、录像、拍照、视频通话等功能</string>
    <string name="smart_home_camera_history_text">视频回看</string>
    <string name="smart_home_camera_history_none_text">还没有视频内容哦</string>
    <string name="smart_home_camera_history_day_explain_text">视频有效期</string>
    <string name="smart_home_camera_history_day_2">2天</string>
    <string name="smart_home_camera_history_day_7">7天</string>
    <string name="smart_home_camera_history_day_14">14天</string>
    <string name="smart_home_camera_history_day_30">30天</string>
    <string name="smart_home_camera_history_day_45">45天</string>
    <string name="smart_home_camera_history_day_60">60天</string>
    <string name="smart_home_camera_history_day_75">75天</string>
    <string name="smart_home_camera_history_day_90">90天</string>
    <string name="scan">扫一扫</string>
    <string name="forget_pin_code">忘记PIN码</string>
    <string name="forget_pin_code_tip1">1.打开设备-设置-用户管理--重新绑定</string>
    <string name="forget_pin_code_tip2">2.管理员验证</string>
    <string name="forget_pin_code_tip3">3.用户重新绑定设备</string>
</resources>