<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_user_info_FFFFFF"
    android:orientation="vertical"
    tools:context=".activities.bindsevice.ForgetPINCodeActivity">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/action_bar_icon_back" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_63"
        android:text="@string/forget_pin_code"
        android:textColor="@color/mine_user_info_000000"
        android:textSize="@dimen/sp_32" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_26"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_35">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/forget_pin_code_tip1"
            android:textColor="@color/color_BBBBBB"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_15"
            android:text="@string/forget_pin_code_tip2"
            android:textColor="@color/color_BBBBBB"
            android:textSize="@dimen/sp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pin_code_tip3"
            android:textColor="@color/color_BBBBBB"
            android:textSize="@dimen/sp_12" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_21"
        android:layout_gravity="center"
        android:background="@mipmap/bind_code_eg"/>

    <TextView
        android:id="@+id/tvScan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_46"
        android:background="@drawable/base_change_blue"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:text="@string/scan"
        android:gravity="center"
        android:textColor="@color/mine_user_info_FFFFFF"/>

</LinearLayout>