<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tancheng.carbonchain.activities.storage.document.ActivityShowDocument"
    android:background="@android:color/white">

    <!-- custom action bar begin -->
    <RelativeLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_action_bar_height"
        android:background="@drawable/shadow_bg_bottom_line">
        <RelativeLayout
            android:id="@+id/custom_action_bar_icon_layout"
            android:layout_width="@dimen/custom_action_bar_height"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">
            <ImageView
                android:id="@+id/iv_title_left_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/action_bar_icon_back"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="我是文档.doc"
            android:textColor="@color/custom_action_bar_title_text_color"
            android:textSize="@dimen/custom_action_bar_title_text_size"/>
    </RelativeLayout>
    <!-- custom action bar end -->

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_oprations_height"
        android:layout_marginTop="@dimen/custom_action_bar_height"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_default_text_1"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_default_text_2"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_default_text_3"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_default_text_4"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_default_text_5"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/document_default_text_6"
            android:textColor="@android:color/black"
            android:textSize="12sp"/>
    </LinearLayout>



</RelativeLayout>
