<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- custom action bar begin -->
    <RelativeLayout
        android:id="@+id/custom_action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/custom_action_bar_height"
        android:background="@drawable/shadow_bg_bottom_line">
        <RelativeLayout
            android:id="@+id/custom_action_bar_icon_layout"
            android:layout_width="@dimen/custom_action_bar_height"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true">
            <ImageView
                android:id="@+id/iv_title_left_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:src="@mipmap/action_bar_icon_back"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/smart_home_camera_history_text"
            android:textColor="@color/custom_action_bar_title_text_color"
            android:textSize="@dimen/custom_action_bar_title_text_size"/>
    </RelativeLayout>
    <!-- custom action bar end -->


    <!-- no history -->
    <LinearLayout
        android:id="@+id/camera_history_none_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">
        <ImageView
            android:id="@+id/smart_home_camera_history_none_image"
            android:layout_width="@dimen/public_big_image_width"
            android:layout_height="@dimen/public_big_image_height"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/smart_home_camera_history_none_image"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/smart_home_camera_history_none_text"
            android:textSize="@dimen/public_text_size_16_sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>


    <!-- bottom settings -->
    <LinearLayout
        android:id="@+id/bottom_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/smart_home_camera_history_days_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/smart_home_camera_history_day_explain_icon"
                android:layout_width="41dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:paddingLeft="9dp"
                android:paddingTop="10dp"
                android:paddingRight="12dp"
                android:paddingBottom="10dp"
                android:src="@mipmap/smart_home_camera_history_day_explain_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/smart_home_camera_history_day_explain_icon"
                android:layout_centerVertical="true"
                android:text="@string/smart_home_camera_history_day_explain_text"
                android:textSize="@dimen/public_text_size_16_sp"
                android:textColor="@color/smart_home_camera_history_day_explain_text_color"/>
        </RelativeLayout>
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginRight="8dp"
            android:max="7"
            android:progress="0"
            android:progressDrawable="@drawable/seek_bar_bg"
            android:thumb="@drawable/seek_bar_thumb"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_2"
                android:textColor="@color/smart_home_camera_history_day_select_true"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_7"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_14"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_30"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_45"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_60"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_75"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_home_camera_history_day_90"
                android:textColor="@color/smart_home_camera_history_day_select_false"
                android:textSize="@dimen/public_text_size_12_sp"/>
        </LinearLayout>
    </LinearLayout>


    <!-- content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/custom_action_bar"
        android:layout_above="@id/bottom_settings">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
