<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_delete_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pop_window_shadow_color"
    android:paddingLeft="@dimen/confirm_padding_left"
    android:paddingRight="@dimen/confirm_padding_left">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/confirm_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:gravity="center"
            android:text="@string/smart_home_camera_sleep_confirm_title_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/public_text_size_17_sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:gravity="center"
            android:text="@string/smart_home_camera_sleep_confirm_remark_text"
            android:textColor="@color/smart_home_camera_sleep_confirm_remark_text_color"
            android:textSize="@dimen/public_text_size_12_sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ffdddddd"
            android:layout_marginTop="25dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/confirm_btn_height"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/confirm_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/public_cancel_text"
                android:textSize="@dimen/confirm_cancel_text_size"
                android:textColor="@color/confirm_cancel_text_color"
                android:gravity="center"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#FFDCDEE3"/>
            <TextView
                android:id="@+id/confirm_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/public_confirm_text"
                android:textSize="@dimen/confirm_delete_text_size"
                android:textColor="@color/confirm_delete_text_color"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
